baml_language/crates/baml_tests/snapshots/compiles/json_cross_namespace_static_call/baml_tests__compiles__json_cross_namespace_static_call__02_parser__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "decode_root"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "j"
        COLON ":"
        TYPE_EXPR "baml.json.json"
          WORD "baml"
          DOT "."
          WORD "json"
          DOT "."
          WORD "json"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      WORD "root"
      DOT "."
      WORD "pkg"
      DOT "."
      WORD "inner"
      DOT "."
      WORD "Box"
      TYPE_ARGS
        LESS "<"
        TYPE_EXPR "int"
          WORD "int"
        GREATER ">"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "baml.json.JsonParseError | baml.json.JsonDecodeError"
        WORD "baml"
        DOT "."
        WORD "json"
        DOT "."
        WORD "JsonParseError"
        PIPE "|"
        WORD "baml"
        DOT "."
        WORD "json"
        DOT "."
        WORD "JsonDecodeError"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          FIELD_ACCESS_EXPR
            PATH_EXPR
              PATH_EXPR "root.pkg.inner.Box"
                WORD "root"
                DOT "."
                WORD "pkg"
                DOT "."
                WORD "inner"
                DOT "."
                WORD "Box"
              GENERIC_ARGS
                LESS "<"
                TYPE_EXPR "int"
                  WORD "int"
                GREATER ">"
            DOT "."
            WORD "from_json"
          CALL_ARGS "(j)"
            L_PAREN "("
            WORD "j"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "decode_auto"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "j"
        COLON ":"
        TYPE_EXPR "baml.json.json"
          WORD "baml"
          DOT "."
          WORD "json"
          DOT "."
          WORD "json"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      WORD "root"
      DOT "."
      WORD "pkg"
      DOT "."
      WORD "inner"
      DOT "."
      WORD "AutoBox"
      TYPE_ARGS
        LESS "<"
        TYPE_EXPR "int"
          WORD "int"
        GREATER ">"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "baml.json.JsonParseError | baml.json.JsonDecodeError"
        WORD "baml"
        DOT "."
        WORD "json"
        DOT "."
        WORD "JsonParseError"
        PIPE "|"
        WORD "baml"
        DOT "."
        WORD "json"
        DOT "."
        WORD "JsonDecodeError"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          FIELD_ACCESS_EXPR
            PATH_EXPR
              PATH_EXPR "root.pkg.inner.AutoBox"
                WORD "root"
                DOT "."
                WORD "pkg"
                DOT "."
                WORD "inner"
                DOT "."
                WORD "AutoBox"
              GENERIC_ARGS
                LESS "<"
                TYPE_EXPR "int"
                  WORD "int"
                GREATER ">"
            DOT "."
            WORD "from_json"
          CALL_ARGS "(j)"
            L_PAREN "("
            WORD "j"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
