baml_language/crates/baml_tests/snapshots/compiles/json_cross_namespace_static_call/baml_tests__compiles__json_cross_namespace_static_call__02_parser__ns_pkg_ns_inner_box.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Box"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM "T"
        WORD "T"
      GREATER ">"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "T"
        WORD "T"
    FUNCTION_DEF
      KW_FUNCTION "function"
      WORD "from_json"
      PARAMETER_LIST
        L_PAREN "("
        PARAMETER
          WORD "j"
          COLON ":"
          TYPE_EXPR "baml.json.json"
            WORD "baml"
            DOT "."
            WORD "json"
            DOT "."
            WORD "json"
        R_PAREN ")"
      ARROW "->"
      TYPE_EXPR
        WORD "Box"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "T"
            WORD "T"
          GREATER ">"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "baml.json.JsonParseError | baml.json.JsonDecodeError"
          WORD "baml"
          DOT "."
          WORD "json"
          DOT "."
          WORD "JsonParseError"
          PIPE "|"
          WORD "baml"
          DOT "."
          WORD "json"
          DOT "."
          WORD "JsonDecodeError"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR
          L_BRACE "{"
          OBJECT_LITERAL
            PATH_EXPR
              WORD "Box"
              GENERIC_ARGS
                LESS "<"
                TYPE_EXPR "T"
                  WORD "T"
                GREATER ">"
            L_BRACE "{"
            OBJECT_FIELD
              WORD "value"
              COLON ":"
              CALL_EXPR
                PATH_EXPR
                  PATH_EXPR "baml.json.from_json"
                    WORD "baml"
                    DOT "."
                    WORD "json"
                    DOT "."
                    WORD "from_json"
                  GENERIC_ARGS
                    LESS "<"
                    TYPE_EXPR "T"
                      WORD "T"
                    GREATER ">"
                CALL_ARGS
                  L_PAREN "("
                  CALL_EXPR
                    PATH_EXPR "baml.json.field"
                      WORD "baml"
                      DOT "."
                      WORD "json"
                      DOT "."
                      WORD "field"
                    CALL_ARGS
                      L_PAREN "("
                      WORD "j"
                      COMMA ","
                      STRING_LITERAL "value"
                        QUOTE """
                        WORD "value"
                        QUOTE """
                      R_PAREN ")"
                  R_PAREN ")"
            R_BRACE "}"
          R_BRACE "}"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "AutoBox"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM "T"
        WORD "T"
      GREATER ">"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "T"
        WORD "T"
    R_BRACE "}"

=== ERRORS ===
None
